Dialogs: header alignment fixes (#1245)

--- a/src/less/fullscreen-dialog/base/fullscreen-dialog.less
+++ b/src/less/fullscreen-dialog/base/fullscreen-dialog.less
@@ -41,7 +41,6 @@ button.fullscreen-dialog__back {
     outline-offset: 4px;
     padding: 0;
     position: relative;
-    width: auto;
     z-index: 1;
 }
 
