--- a/src/less/lightbox-dialog/base/lightbox-dialog.less
+++ b/src/less/lightbox-dialog/base/lightbox-dialog.less
@@ -64,7 +64,6 @@ button.lightbox-dialog__close {
     border: 0;
     outline-offset: 4px;
     position: relative;
-    width: auto;
     z-index: 1;
 }
 
