--- a/src/less/panel-dialog/base/panel-dialog.less
+++ b/src/less/panel-dialog/base/panel-dialog.less
@@ -45,7 +45,6 @@ button.panel-dialog__close {
     outline-offset: 4px;
     padding: 0;
     position: relative;
-    width: auto;
     z-index: 1;
 }
 
